# BB-Alr-8

./: README.md
Elimination/controllers/epuck/: API.hpp  CameraController.hpp  config.hpp  motors.cpp  solver.cpp  solver.hpp
Elimination/worlds/: .RoboGames 2024 University Category(BB-Alr-8).wbproj
Final/controllers/bbAlr8/: 2bbAlr8.py  bbAlr8.py  bbAlr8Final.py
Final/worlds/: .fes.wbproj  fes.wbt
Semifinal/: README.md
Semifinal/controllers/bbAlr8/: API.cpp  API.hpp  CameraController.cpp  CameraController.hpp  Makefile  bbAlr8  bbAlr8.cpp  bbAlr8.hpp  config.hpp  ledManager.cpp  ledManager.hpp  main.cpp  motors.cpp  motors.hpp  rescueRunAlgo.cpp  rescueRunAlgo.hpp  sensorManager.cpp  sensorManager.hpp  solver.cpp  solver.hpp
Semifinal/controllers/epuck/: config.hpp  epuck.cpp  epuck.hpp  floodfill.hpp  main.cpp  sensor_manager.cpp  sensor_manager.hpp
Semifinal/debug/: rightDeadEnd.txt
Semifinal/protos/: E-puck.proto
Semifinal/worlds/: .RoboGames 2024 University Category(BB-Alr-8).wbproj  RoboGames 2024 University Category(BB-Alr-8).wbt
controllers/: epuck_controller .hpp  epuck_controller.cpp  main.cpp
controllers/epuck/: API.cpp  CameraController.cpp  Makefile  config.hpp  epuck  epuck.cpp  epuck.hpp  floodfill.cpp  floodfill.hpp  main.cpp  motors.cpp  motors.hpp  sensor_manager.cpp  sensor_manager.hpp  solver.cpp
final_kobuki_codes/: Final.py  Final2(NT).py  Final2_NT.py  Final3_NT.py  all.py  color_calibration.py  finla2.py  obj.py  sim2.py  simulation.py
final_kobuki_codes/FreenectBuild/: CMakeLists.txt  README.md
protos/: E-puck.proto  WorldMaze.proto
videos/: readme.MD
worlds/: .RoboGames 2024 University Category(BB-Alr-8).wbproj  RoboGames 2024 University Category(BB-Alr-8).wbt
